--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 02</title>
+    <title>Aula 03</title>
 </head>
 <body>
-    <h1>Aula 02</h1>
-    <p>Tag de parágrafo</p>
+    <h1>Aula 03</h1>
+    <a href="https://www.w3schools.com">Visit W3Schools</a>
+    <br>
+    <a href="http://unasp.br">UNASP</a>
+    <br>
 
-    <h2>H2</h2>
-    <p>Lorem ipsum dolor sit amet.</p>
-
-    <h3>H3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
-
-    <a href="https://www.w3schools.com">W3Schools</a>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
+    <img width="200" height="150" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
+    <img alt="Descrição na imagem" width="200" height="150" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
 </body>
 </html>
