--- a/index.html
+++ b/index.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 03</title>
+    <title>Aula 04</title>
 </head>
 <body>
-    <h1>Aula 03</h1>
-    <a href="https://www.w3schools.com">Visit W3Schools</a>
-    <br>
-    <a href="http://unasp.br">UNASP</a>
-    <br>
+    <h1>Aula 04</h1>
+    <p>This </p>
+    <p>is a parapraph</p>
+    <p>This is a parapraph.</p>
+    <p>This is a parapraph.</p>
+    
+    <h1>This is heading</h1>
+    <p>This is some text.</p>
+    <hr>
+    <h1>This is heading 2</h1>
+    <p>This is some other text.</p>
+    <hr>
 
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
-    <img width="200" height="150" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
-    <img alt="Descrição na imagem" width="200" height="150" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQpngGRjYX1ca7qAADU3K6eGLj7ShQE3L2otdzfryl_Y9Ht2QRoQKYQbsXd36XIxMbYOw0&usqp=CAU">
+    <p>This is<br>a paraprah<br>with line breaks</p>
+
+    <h1 style="background-color: powderblue;">This is a heading</h1>
+    <p style="background-color: tomato;">This is a paragraph.</p>
+
+    <h1 style="text-align: center;">Centered heading</h1>
+    <p style="text-align: center;">Centered paragraph</p>
+
+    <h1>Introdução a table</h1>
+    <table>
+        <tr>
+            <th>Table header</th>
+            <th>Table header</th>
+            <th>Table header</th>
+        </tr>
+        <tr>
+            <td>Table data</td>
+            <td>Table data</td>
+            <td>Table data</td>
+        </tr>
+        <tr>
+            <td>Table data</td>
+            <td>Table data</td>
+            <td>Table data</td>
+        </tr>
+    </table>
 </body>
 </html>
